# zkvm_benchmarks

./: .gitignore  CNAME  LICENSE  Makefile  README.md  benchmark.html  benchmark.ipynb  benchmark.sh  benchmark_fibo.sh  benchmark_fibo_cuda.sh  benchmark_keccak.sh  benchmark_keccak_cuda.sh  benchmark_results.csv  benchmark_reth.sh  benchmark_reth_cuda.sh  benchmark_reth_cuda_sp1_modes.sh  benchmark_reth_gpu.sh  cuda.sh  index.html  install_deps.sh  plotter.py  requirements.txt  staged-changes-no-elf.diff  staged-changes.diff
.ipynb_checkpoints/: benchmark-checkpoint.ipynb
bench_results/: 18_feb_25_epyc7543_32c_128gb.csv  18_feb_25_epyc8534p_64c_576gb.csv  26_feb_25_epyc7543_32c_128gb.csv  fibo_24_feb_25_epyc7543_32c_128gb.csv  fibo_26_feb_25_A4000.csv  fibo_5_mar_25_epyc8534p_64c_576gb.csv  fibo_6_mar_25_A6000.csv  keccak_14_mar_25_A6000.csv  keccak_18_mar_25_epyc8534p_64c_576gb.csv  keccak_19_feb_25_epyc7543_32c_128gb.csv  keccak_19_feb_25_epyc7543_32c_128gb_v2.csv  keccak_20_feb_25_epyc7543_32c_128gb.csv  keccak_20_feb_25_epyc7543_32c_128gb_v2.csv  keccak_24_feb_25_epyc7543_32c_128gb.csv  keccak_5_mar_25_epyc8534p_64c_576gb.csv  keccak_6_mar_25_A6000.csv  rsp_11_mar_25_A6000.csv  rsp_12_mar_25_A6000.csv  rsp_18_mar_25_A6000.csv  rsp_8_mar_25_A6000.csv  rsp_sp1_modes_13_mar_25_A6000.csv
fibo_pico/: Cargo.toml  n_to_pico_hex.py
fibo_pico/app/: Cargo.toml
fibo_pico/app/src/: main.rs
fibo_pico/elf/: riscv32im-pico-zkvm-elf
fibo_pico/lib/src/: lib.rs
fibo_pico/prover/: Cargo.toml  groth16_witness.json  proof.json
fibo_pico/prover/src/: main.rs
fibo_risc0/host/: Cargo.toml
fibo_risc0/host/src/: main.rs
fibo_risc0/methods/guest/: Cargo.toml
fibo_sp1/program/: Cargo.toml
fibo_sp1/script/: Cargo.toml
fibo_sp1/script/src/: main.rs
fibonacci/pico/app/src/: main.rs
fibonacci/pico/lib/: Cargo.toml
fibonacci/pico/prover/src/: main.rs
fibonacci/risc0/host/src/: main.rs
fibonacci/risc0/methods/guest/src/: main.rs
fibonacci/sp1/: .env.example
keccak/pico/: Cargo.toml
keccak/pico/elf/: riscv32im-pico-zkvm-elf
keccak/pico/prover/src/: main.rs
keccak/risc0/host/: Cargo.toml
keccak/risc0/host/src/: main.rs
keccak/risc0/methods/: Cargo.toml
keccak/risc0/methods/guest/: Cargo.toml
keccak/risc0/methods/guest/src/: main.rs
keccak/sp1/: Cargo.toml
keccak/sp1/program/src/: main.rs
keccak/sp1/script/: Cargo.toml
keccak_pico/: Cargo.toml  rust-toolchain
keccak_pico/app/: Cargo.toml
keccak_pico/app/src/: main.rs
keccak_pico/elf/: riscv32im-pico-zkvm-elf
keccak_pico/lib/src/: lib.rs
keccak_pico/prover/: Cargo.toml
keccak_pico/prover/src/: main.rs
keccak_risc0/host/: Cargo.toml
keccak_risc0/host/src/: main.rs
keccak_risc0/methods/guest/: Cargo.toml
keccak_risc0/methods/guest/src/: main.rs
keccak_sp1/program/: Cargo.toml
keccak_sp1/program/src/: main.rs
keccak_sp1/script/: Cargo.toml
keccak_sp1/script/src/: main.rs
rsp/pico/: rust-toolchain
rsp/pico/prover/: Cargo.toml
rsp/pico/prover/src/: main.rs
rsp/risc0/host/: Cargo.toml
rsp/risc0/host/src/: main.rs
rsp/risc0/methods/guest/: Cargo.toml
rsp/risc0/methods/guest/src/: main.rs
rsp/sp1/: Cargo.toml
rsp/sp1/program/: Cargo.toml
rsp/sp1/script/src/: main.rs
rsp_pico/: Cargo.toml
rsp_pico/app/: Cargo.toml  tree.txt
rsp_pico/app/src/: main.rs
rsp_pico/prover/: Cargo.toml
rsp_pico/prover/src/: main.rs
rsp_risc0/host/: Cargo.toml
rsp_risc0/host/src/: main.rs
rsp_risc0/methods/guest/: Cargo.toml
rsp_risc0/methods/guest/src/: main.rs
rsp_sp1/: LICENSE-MIT
rsp_sp1/program/: Cargo.toml
rsp_sp1/program/src/: main.rs
rsp_sp1/script/: Cargo.toml
rsp_sp1/script/src/: main.rs
