[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/main.rs"


[dependencies]
sp1-sdk = "4.1.0"
rand = "0.8"
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak",  features = ["keccak"] }

[build-dependencies]
sp1-build = "4.1.0"
