[package]
name = "prover"
version = "1.0.0"

[dependencies]
pico-sdk = { workspace = true }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
#alloy-sol-types = "0.8.0"
rand = "0.8"
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "7ca364f3357056ef84dea757b385728bbacd1fe8" }
