[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.3", features = ["unstable"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[features]
cuda = ["risc0-zkvm/cuda"]
