[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[features]
cuda = ["risc0-zkvm/cuda"]
