[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "62ebec290c7cb19dc8b2ff991e27248c95f80952", features = ["unstable"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[features]
cuda = ["risc0-zkvm/cuda"]
