[package]
name = "keccak"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.3", default-features = false, features = ['std', 'unstable'] }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", features = ["keccak"], tag = "tiny-keccak/v2.0.2-risczero.0" }
#tiny-keccak = { version = "2.0", features = ["keccak"] }
