[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2.4" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
alloy-primitives = "0.8.5"
bincode = "1.3.3"
clap = { version = "4.5.7", features = ["derive", "env"] }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "4ceefdfb74c1691dd009168f0c7aec3d746ef8b3" }

[features]
cuda = ["risc0-zkvm/cuda"]
