[package]
name = "keccak"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", features = ["keccak"], tag = "tiny-keccak/v2.0.2-risczero.0" }
