[package]
name = "keccak"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "62ebec290c7cb19dc8b2ff991e27248c95f80952", default-features = false, features = ['std', 'unstable'] }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", features = ["keccak"], tag = "tiny-keccak/v2.0.2-risczero.0" }
